SHIT WORKS. SUICIDE WATCH OVER